--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.13.0",
+    "ollama": "^0.5.14",
+    "ollama-node": "^0.1.28",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
